overlays/qa/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-demo-app
spec:
  rules:
    - host: qa.gitops-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitops-demo-app
                port:
                  number: 80
